--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="#block5">Контакты</a></li>
             </ul>
         </nav>
-        <a href="reg.html"><img src="/web/img/User.svg" class="user-icon" alt="профиль"></a>
+        <a href="reg.html"><img src="web/img/User.svg" class="user-icon" alt="профиль"></a>
     </header>
     <main>
         <div class="banner" >
