--- a/auth.html
+++ b/auth.html
@@ -52,7 +52,7 @@
                             </div>
                         </form>
                         <div class="sign-in-div">
-                            <input class="auth-sign-in" type="button" value="Войти" />
+                            <a href="profile.html>"<input class="auth-sign-in" type="button" value="Войти" /></a>
                         </div>
                     </div>
 
